tons of updates:
a lot of database updates.
fixing css_import()
fixing js()

removing tgMail.php - only contained 1 function so it was moved to the utility function file

added base class and base exceptions that all classes should extend and exceptions thrown by any core library should extend

updated the application/config/db.php.sample file

fixed minify integration

--- a/application/config/db.php.sample
+++ b/application/config/db.php.sample
@@ -8,7 +8,5 @@ for complete licensing information.
 
 // rename this file to db.php and make your necessary changes to it.
 
-$db = new dbSetup( 'username', 'password', 'example-database' );
-$config['dbm'] = new dbManager( $db );
-
-global $dbh = $config['dbm']
+dbm()->useSetup( new dbSetup( 'username', 'password', 'example-database' ) );
+dbm()->addSetup( new dbSetup( 'username', 'password', 'database-2' ), 'database2' );
