--- a/trunk/.htaccess
+++ b/trunk/.htaccess
@@ -9,33 +9,10 @@ Options -Indexes
 RewriteEngine on
 
 <IfModule mod_rewrite.c>
-	RewriteRule ^application/cli/					- [F]
-	RewriteRule ^application/config/				- [F]
-	RewriteRule ^application/controllers/			- [F]
-	RewriteRule ^application/forms/					- [F]
-	RewriteRule ^application/grids/					- [F]
-	RewriteRule ^application/libraries/				- [F]
-	RewriteRule ^application/models/				- [F]
-	RewriteRule ^application/reports/				- [F]
-	RewriteRule ^application/plugins/				- [F]
-	RewriteRule ^application/searches/				- [F]
-	RewriteRule ^application/views/					- [F]
-	RewriteRule ^cli.php							- [F]
-
-	RewriteRule ^tgsf_core/config/					- [F]
-	RewriteRule ^tgsf_core/legal/					- [F]
-	RewriteRule ^tgsf_core/libraries/				- [F]
-	RewriteRule ^tgsf_core/logs/					- [F]
-	RewriteRule ^tgsf_core/plugins/					- [F]
-	RewriteRule ^tgsf_core/3rd_party/graph/			- [F]
-	RewriteRule ^tgsf_core/3rd_party/FirePHPCore/	- [F]
-	RewriteRule ^tgsf_core/3rd_party/Zend/			- [F]
-	
-	RewriteRule ^tgsf_core/tgSimpleFramework.php	- [F]
-	RewriteRule ^tgsf_core_assets/minify_groups/	- [F]
+	RewriteCond %{REQUEST_URI} \.php$
+	RewriteCond %{REQUEST_FILENAME} -d	[NC]
+	RewriteRule . index.php			[forbidden]
 	
 	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteCond %{REQUEST_FILENAME} !-d
-
 	RewriteRule . index.php [L]
 </IfModule>
